--- a/index.html
+++ b/index.html
@@ -358,8 +358,11 @@
                     data-wow-delay=".9s"
                 >
                     <a href="TodoList/index.html">
-                        <img src="assets/todo.png" alt="img" />
-                        <div class="desc">To Do List</div>
+                        <img
+                            src="assets/javascript.jpg"
+                            alt="Javascript Projets"
+                        />
+                        <div class="desc">Javascript Projects</div>
                     </a>
                 </div>
                 <div
@@ -368,8 +371,8 @@
                     data-wow-delay="1s"
                 >
                     <a href="BookList/index.html">
-                        <img src="assets/bookList.png" alt="img5" />
-                        <div class="desc">Book List</div>
+                        <img src="assets/sass.png" alt="SASS projects" />
+                        <div class="desc">SASS Projects</div>
                     </a>
                 </div>
                 <div
@@ -378,8 +381,21 @@
                     data-wow-delay="1.1s"
                 >
                     <a href="bootstrap/index.html">
-                        <img src="assets/bootstrapWebsite.png" alt="img5" />
-                        <div class="desc">Bootstrap</div>
+                        <img
+                            src="assets/bootstrap.jpeg"
+                            alt="Bootstrap Website"
+                        />
+                        <div class="desc">Bootstrap Websites</div>
+                    </a>
+                </div>
+                <div
+                    class="col wow fadeInUp"
+                    data-wow-duration="1.1s"
+                    data-wow-delay="1.1s"
+                >
+                    <a href="bootstrap/index.html">
+                        <img src="assets/react.png" alt="React Projects" />
+                        <div class="desc">React Projects</div>
                     </a>
                 </div>
             </div>
