--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#home">Home</a>
             <a href="#about">About</a>
             <a href="#learning">Learning</a>
-            <a href="#gallery">Gallery</a>
+            <a href="#gallery">Projects</a>
             <a href="#contact">Contact</a>
         </div>
 
@@ -61,7 +61,7 @@
                         data-wow-duration=".5s"
                         data-wow-delay="1.3s"
                         href="#gallery"
-                        >Gallery</a
+                        >Projects</a
                     >
                     <a
                         class="wow fadeInDown"
@@ -380,7 +380,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay="1.1s"
                 >
-                    <a href="bootstrap/index.html">
+                    <a href="https://ivanbootstrap.netlify.com">
                         <img
                             src="assets/bootstrap.jpeg"
                             alt="Bootstrap Website"
