--- a/index.html
+++ b/index.html
@@ -398,6 +398,16 @@
                         <div class="desc">React Projects</div>
                     </a>
                 </div>
+                <div
+                    class="col wow fadeInUp"
+                    data-wow-duration="1.1s"
+                    data-wow-delay="1.1s"
+                >
+                    <a href="bootstrap/index.html">
+                        <img src="assets/animations.png" alt="JS Animations" />
+                        <div class="desc">JS Animations</div>
+                    </a>
+                </div>
             </div>
         </div>
 
