--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".9s"
                 >
-                    <a href="TodoList/index.html">
+                    <a href="https://ivanjs.netlify.com/">
                         <img
                             src="assets/javascript.jpg"
                             alt="Javascript Projets"
