--- a/index.html
+++ b/index.html
@@ -128,11 +128,7 @@
                     data-wow-duration="1.3s"
                     data-wow-delay=".6s"
                 >
-                    Hi there! I'm Ivan, a Front-end Developer borned in Naples.
-                    Since i was a child i was fascinated from the Computer
-                    Science world. Create something from nothing. Amazing isn't
-                    it ? Starting from a blank sheet you can literally create
-                    your own world. Exciting.
+                    Hi there! I'm Ivan, a Front-end Developer from Naples. Since i was child i'm fascinated from the Computer Science world. Create something from nothing. Amazing isn't it ? Starting from a blank sheet you can literally create your own world. Exciting.
                 </p>
 
                 <p
@@ -140,10 +136,7 @@
                     data-wow-duration="1.3s"
                     data-wow-delay=".8s"
                 >
-                    My life goal is to become a Full-Stack developer. I started
-                    from the front-end and from a couple of years i'm starting
-                    building up, project by project, my Back-end skills using
-                    the amazing Node JS.
+                    My life goal is to become a Full-Stack developer. I started from the front-end and now i'm starting building up, project by project, my Back-end skills using Node JS.
                 </p>
 
                 <a
