--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".6s"
                 >
-                    <a href="BookList/index.html">
+                    <a href="https://ivanreact.netlify.com">
                         <img src="assets/sass.png" alt="SASS projects" />
                         <div class="desc">SASS Projects</div>
                     </a>
@@ -386,7 +386,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".8s"
                 >
-                    <a href="bootstrap/index.html">
+                    <a href="https://ivanreact.netlify.com">
                         <img src="assets/react.png" alt="React Projects" />
                         <div class="desc">React Projects</div>
                     </a>
@@ -396,7 +396,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".9s"
                 >
-                    <a href="bootstrap/index.html">
+                    <a href="https://ivananim.netlify.com">
                         <img src="assets/animations.png" alt="JS Animations" />
                         <div class="desc">JS Animations</div>
                     </a>
