--- a/index.html
+++ b/index.html
@@ -25,17 +25,18 @@
 
         <div class="nav" id="nav">
             <a href="javascript:void(0)" id="close" class="close"> &times;</a>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#learning">Learning</a>
-            <a href="#gallery">Projects</a>
-            <a href="#contact">Contact</a>
+            <a target="_blank" href="#home">Home</a>
+            <a target="_blank" href="#about">About</a>
+            <a target="_blank" href="#learning">Learning</a>
+            <a target="_blank" href="#gallery">Projects</a>
+            <a target="_blank" href="#contact">Contact</a>
         </div>
 
         <header>
             <ul>
                 <li>
                     <a
+                       target="_blank"
                         class="wow fadeInDown"
                         data-wow-duration=".5s"
                         data-wow-delay=".5s"
@@ -43,6 +44,7 @@
                         >Home</a
                     >
                     <a
+                       target="_blank"
                         class="wow fadeInDown"
                         data-wow-duration=".5s"
                         data-wow-delay=".6s"
@@ -50,6 +52,7 @@
                         >About</a
                     >
                     <a
+                       target="_blank"
                         class="wow fadeInDown"
                         data-wow-duration=".5s"
                         data-wow-delay=".7s"
@@ -57,6 +60,7 @@
                         >Learning</a
                     >
                     <a
+                       target="_blank"
                         class="wow fadeInDown"
                         data-wow-duration=".5s"
                         data-wow-delay=".8s"
@@ -64,6 +68,7 @@
                         >Projects</a
                     >
                     <a
+                       target="_blank"
                         class="wow fadeInDown"
                         data-wow-duration=".5s"
                         data-wow-delay=".9s"
@@ -350,7 +355,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".5s"
                 >
-                    <a href="https://ivanjs.netlify.com/">
+                    <a target="_blank" href="https://ivanjs.netlify.com/">
                         <img
                             src="assets/javascript.jpg"
                             alt="Javascript Projets"
@@ -363,7 +368,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".6s"
                 >
-                    <a href="https://ivanreact.netlify.com">
+                    <a target="_blank" href="https://ivanreact.netlify.com">
                         <img src="assets/sass.png" alt="SASS projects" />
                         <div class="desc">SASS Projects</div>
                     </a>
@@ -373,7 +378,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".7s"
                 >
-                    <a href="https://ivanbootstrap.netlify.com">
+                    <a target="_blank" href="https://ivanbootstrap.netlify.com">
                         <img
                             src="assets/bootstrap.jpeg"
                             alt="Bootstrap Website"
@@ -386,7 +391,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".8s"
                 >
-                    <a href="https://ivanreact.netlify.com">
+                    <a target="_blank" href="https://ivanreact.netlify.com">
                         <img src="assets/react.png" alt="React Projects" />
                         <div class="desc">React Projects</div>
                     </a>
@@ -396,7 +401,7 @@
                     data-wow-duration="1.1s"
                     data-wow-delay=".9s"
                 >
-                    <a href="https://ivananim.netlify.com">
+                    <a target="_blank" href="https://ivananim.netlify.com">
                         <img src="assets/animations.png" alt="JS Animations" />
                         <div class="desc">JS Animations</div>
                     </a>
